--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "gitignore": "^0.7.0",
+    "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.5.1",
     "nodemon": "^3.1.4",
-    "uuid": "^10.0.0"
+    "uuid": "^10.0.0",
+    "validator": "^13.12.0"
   }
 }
